# kubevirt

./: .gitignore  building-mshvch-containers.md  roles.yaml
api/: api-rule-violations-known.list  api-rule-violations.list
api/openapi-spec/: swagger.json
cmd/fake-cmd-server/: BUILD.bazel  fake-cmd-server.go
cmd/sidecars/disk-mutation/: BUILD.bazel  diskimage.go
cmd/sidecars/network-passt-binding/callback/: BUILD.bazel  callback_test.go
cmd/sidecars/network-passt-binding/domain/: BUILD.bazel  configurator.go  configurator_test.go
cmd/sidecars/network-slirp-binding/callback/: BUILD.bazel  callback.go  callback_test.go
cmd/sidecars/network-slirp-binding/domain/: BUILD.bazel  domain.go  domain_test.go
cmd/virt-freezer/: BUILD.bazel  main.go
cmd/virt-launcher/: BUILD.bazel  ch.conf  virt-launcher.go
cmd/virt-launcher-monitor/: BUILD.bazel  virt-launcher-monitor.go
cmd/virt-launcher/node-labeller/: node-labeller.sh
hack/: functests.sh  generate.sh  run-mshv-tests.sh
hack/build-mariner-based-imgs/: Dockerfile-builder  Dockerfile-virt-api  Dockerfile-virt-controller  Dockerfile-virt-exportproxy  Dockerfile-virt-handler  Dockerfile-virt-launcher-ch  Dockerfile-virt-launcher-qemu  Dockerfile-virt-operator  README.md  build-images.sh  make-mariner-manifests.sh  push-images.sh
kubevirtci/cluster-up/cluster/: k8s-provider-common.sh
pkg/cloud-init/: BUILD.bazel  cloud-init.go  cloud-init_test.go
pkg/ephemeral-disk/: BUILD.bazel  ephemeral-disk.go  ephemeral-disk_test.go
pkg/ephemeral-disk-utils/: BUILD.bazel  utils.go
pkg/ephemeral-disk/fake/: BUILD.bazel  ephemeral-disk.go
pkg/hooks/: BUILD.bazel  generated_mock_manager.go  manager.go
pkg/hypervisor/: BUILD.bazel  ch-hypervisor.go  hypervisor.go  qemu-hypervisor.go
pkg/libvmi/: vmi.go
pkg/liveupdate/memory/: BUILD.bazel  memory.go  memory_test.go
pkg/monitoring/domainstats/downwardmetrics/: BUILD.bazel  scraper.go
pkg/network/cache/: BUILD.bazel  domaininterface.go  domaininterface_test.go
pkg/network/domainspec/: BUILD.bazel  domainspec_suite_test.go  generators.go  generators_test.go  interface.go
pkg/network/link/: BUILD.bazel  address.go
pkg/network/setup/: BUILD.bazel  netstat.go  netstat_test.go  network.go  network_suite_test.go  network_test.go  podnic.go  podnic_test.go
pkg/network/setup/netpod/: BUILD.bazel  discoverbridge.go  netpod.go  netpod_test.go
pkg/storage/snapshot/: BUILD.bazel  source.go
pkg/testutils/: BUILD.bazel  domain.go  mock_queue.go
pkg/util/: util.go
pkg/util/hardware/: BUILD.bazel  hw_utils.go
pkg/virt-controller/services/: BUILD.bazel  rendercontainer.go  renderresources.go  serialconsolelog.go  template.go  template_test.go
pkg/virt-handler/: BUILD.bazel  vm.go  vm_test.go
pkg/virt-handler/cache/: BUILD.bazel  cache.go  cache_test.go  domain-watcher.go
pkg/virt-handler/cgroup/: cgroup_v1_manager.go  cgroup_v2_manager.go  util.go
pkg/virt-handler/cmd-client/: BUILD.bazel  client.go  generated_mock_client.go
pkg/virt-handler/device-manager/: device_controller.go
pkg/virt-handler/isolation/: detector.go
pkg/virt-handler/notify-server/: BUILD.bazel  server.go
pkg/virt-launcher/: BUILD.bazel  monitor.go
pkg/virt-launcher-common/: BUILD.bazel  generated_mock_manager.go  generated_mock_managerinterface.go  managerinterface.go
pkg/virt-launcher-common/agent/: BUILD.bazel  types.go
pkg/virt-launcher-common/api/: BUILD.bazel
pkg/virt-launcher-common/cmd-server/: BUILD.bazel  server.go  server_test.go
pkg/virt-launcher-common/notify-client/: BUILD.bazel  client.go  notify_client_suite_test.go  notify_test.go
pkg/virt-launcher-common/stats/: BUILD.bazel
pkg/virt-launcher/metadata/: BUILD.bazel  cache.go  kubevirt.go  metadata_test.go
pkg/virt-launcher/notify-client/: BUILD.bazel  client.go  notify_test.go
pkg/virt-launcher/virtwrap/: BUILD.bazel  generated_mock_manager.go  live-migration-source.go  live-migration-target.go  manager.go  manager_test.go  nichotplug.go  nichotplug_test.go
tests/: BUILD.bazel  container_disk_test.go  hyperv_test.go  pool_test.go  subresource_api_test.go  usbredir_test.go  vm_test.go  vmi_configuration_test.go  vmi_iothreads_test.go  vmi_lifecycle_test.go  vmipreset_test.go
tests/compute/: BUILD.bazel  vmidefaults.go
tests/hotplug/: BUILD.bazel  cpu.go  memory.go
tests/instancetype/: instancetype.go
tests/libdomain/: BUILD.bazel  domain.go
tests/libvmifact/: factory.go
tests/migration/: BUILD.bazel  migration.go
tests/network/: BUILD.bazel  vmi_networking.go
tests/storage/: storage.go
tests/testsuite/: fixture.go  kubevirtresource.go
tests/usb/: BUILD.bazel  usb.go
tests/watcher/: BUILD.bazel  watcher.go
tools/manifest-templator/: manifest-templator.go
tools/resource-generator/: resource-generator.go
(+88 files in other folders)
