load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ch-hypervisor.go",
        "hypervisor.go",
        "qemu-hypervisor.go",
    ],
    deps = [
    ],
    importpath = "kubevirt.io/kubevirt/pkg/hypervisor",
    visibility = ["//visibility:public"],
)
