load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ch-hypervisor.go",
        "hypervisor.go",
        "qemu-hypervisor.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/hypervisor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/golang.org/x/sys/unix:go_default_library",
    ],
)
